--- a/styles.css
+++ b/styles.css
@@ -223,7 +223,7 @@ intro-feature h2 {
   font-weight: 600;
 }
 
-.pet-discription {
+.pet-description {
   margin: 0 0 16px 0;
   color: #626262;
   line-height: 150%;
@@ -238,7 +238,7 @@ intro-feature h2 {
 
 @media screen and (min-width: 600px) {
 
-  .pet-discription {
+  .pet-description {
     font-size: 1rem;
   }
 
