--- a/styles.css
+++ b/styles.css
@@ -177,6 +177,17 @@ intro-feature h2 {
   font-family: "Source Sans 3", sans-serif;
   font-size: 1.15rem;
   color: #9F9F9F;
+  cursor: pointer;
+}
+
+.pets-filter button:hover {
+  color: #7d7d7d;
+}
+
+.pets-filter .active,
+.pets-filter .active:hover {
+  color: #475AFF;
+  text-decoration: underline;
 }
 
 .site-footer p {
